# NLP-Final-Project

./: .gitignore  AGENTS.md  FINAL_REVIEW.md  Makefile  PROJECT_REPORT.md  PROJECT_UPGRADE_PLAN.md  README.md  SUBMISSION_CHECKLIST.md  SYSTEM_CARD.md  app.py  demoCommands.txt  demo_queries.md  evaluation_questions.csv  failure_case_report.md  pyproject.toml  rag_system.py  requirements-lite.txt  requirements.txt  test_questions.csv
.github/workflows/: offline-ci.yml
docs/: demo_walkthrough.md
knowledge_base/: faqs.csv  neural_networks_basics.md  self_attention_and_transformer_architecture.md  sequence_modeling_and_rnns.md  tensors_and_pytorch_basics.md  training_rnns_and_bptt.md  transformers_overview.md
knowledge_base/docs/: neural_networks_basics.md  (+5 more)
results/: demo_run.md  dense_validation_report.md  dense_validation_summary.json  evaluation_report.md  evaluation_summary.json  openai_validation_summary.json  test_questions_scored.csv
screenshots/: README.md
scripts/: audit_submission.py  check_environment.py  local_smoke_test.sh  package_submission.py  preflight_m1.py  run_backend_comparison.py  validate_dense_path.py  validate_openai_path.py
tests/: conftest.py  test_backend_comparison.py  test_cli_smoke.py  test_confidence.py  test_dense_chroma_path.py  test_dense_validation.py  test_evaluation.py  test_evaluation_benchmark.py  test_evaluation_metrics.py  test_generation.py  test_knowledge_base_ingest.py  test_openai_validation.py  test_optional_dense_runtime.py  test_optional_streamlit_app.py  test_retrieval_tfidf.py  test_submission_workflow.py
(+21 files in other folders)
