[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragfaq"
version = "0.1.0"
description = "RAG-based FAQ answering system for Durham College NLP Project 10."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "beautifulsoup4>=4.12,<5",
]

[project.optional-dependencies]
lite = [
  "pytest>=8.3,<9",
]
full = [
  "openai>=2.8,<3",
  "chromadb>=1.1,<2",
  "sentence-transformers>=3,<4",
  "numpy>=1.26,<2.0",
  "scikit-learn>=1.4,<1.6",
  "pandas>=2.1,<2.3",
  "pytest>=8.3,<9",
  "rich>=13.7,<14",
]
dev = [
  "build>=1.2,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "optional_dense: runtime checks that require optional dense dependencies and should skip gracefully when unavailable",
]

[tool.ruff]
line-length = 100
target-version = "py311"
